--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "glsl-noise": "^0.0.0",
     "glslify": "^7.1.1",
     "gsap": "^3.12.4",
+    "stats.js": "^0.17.0",
     "three": "^0.157.0"
   }
 }
