--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "lil-gui": "^0.20.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-glsl": "^1.1.2"
   },
   "dependencies": {
+    "dat.gui": "^0.7.9",
+    "framer-motion": "^11.2.4",
     "glsl-noise": "^0.0.0",
     "glslify": "^7.1.1",
     "gsap": "^3.12.4",
+    "locomotive-scroll": "^4.1.4",
     "stats.js": "^0.17.0",
     "three": "^0.157.0"
   }
